<resources>
    <string name="app_name">El Refugio</string>
    <string name="mi_nombre">Laura Valentina Guarin Sanchez</string>
    <string name="introduccion">Inicia una nueva aventura con El Refugio y descubre una nueva forma de ver el mundo </string>
    <string name="Boton_comienza">comienza</string>
    <string name="registro_home">Registrate</string>
    <string name="login_bienvenida">La aventura esta por iniciar,por favor inicia sesion</string>
    <string name="Boton_ingresar">Ingresar</string>
    <string name="recuperacion_contraseña">Recupera tu contraseña</string>
    <string name="ingreso_google">Ingresa con Google</string>
    <string name="creacion_cuenta">No tienes cuenta?</string>
    <string name="descripcion_deregistro">Completa el formulario para crear tu cuenta </string>
<string name="enviar">enviar</string>
    <string name="correo">lvguarin@ucompensar.edu.co</string>
    <string name="telefonos">3106449898</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="textoderecuperarcontraseña">Ingrese el corrreo electronico registrado en su cuenta,para recuperala.</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="inicia_sesi_n">Inicia Sesión</string>
    <string name="terminos_y_condiciones">Terminos y Condiciones</string>
    <string name="Correo_electronico">correo electronico</string>
    <string name="telefono">telefono</string>
    <string name="contraseña">*****</string>
    <string name="nombre_usuario">Nombre_usuario</string>

</resources>