<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/welcomeActivity"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:background="@color/gris"
android:onClick="gotToLogin"
tools:context=".Home_Activity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="213dp"
        android:layout_height="279dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/nombre_app_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/app_name"
        android:textColor="@color/azul"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/texto_Home"
        android:layout_width="331dp"
        android:layout_height="88dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/introduccion"
        android:textAlignment="center"
        android:textColor="@color/azul"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre_app_home" />

    }

    <TextView
        android:id="@+id/texto_Home2"
        android:layout_width="134dp"
        android:layout_height="43dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/registro_home"
        android:textColor="@color/rosado"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texto_Home"
        app:layout_constraintVertical_bias="0.693" />

    <Button
        android:id="@+id/boton_ingresar_login"
        android:layout_width="332dp"
        android:layout_height="71dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="@color/rosado"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/Boton_comienza"
        android:textAlignment="center"
        android:textColor="@color/blanco"
        android:textSize="26sp"
        app:iconSize="30dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texto_Home"
        app:layout_constraintVertical_bias="0.88" />


</androidx.constraintlayout.widget.ConstraintLayout>