<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
             android:layout_height="match_parent"
    android:background="@color/gris">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="123dp"
        android:layout_height="112dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/nombre_app_"
        android:layout_width="196dp"
        android:layout_height="76dp"
        android:fontFamily="serif"
        android:text="@string/app_name"
        android:textColor="@color/azul"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.874"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <TextView
        android:id="@+id/textonombredeperfil"
        android:layout_width="334dp"
        android:layout_height="54dp"
        android:fontFamily="serif"
        android:text="@string/mi_nombre"
        android:textAlignment="center"
        android:textColor="@color/azul"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.649"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nombre_app_"
        app:layout_constraintVertical_bias="0.561" />

    <TextView
        android:id="@+id/textonombredeperfil2"
        android:layout_width="334dp"
        android:layout_height="54dp"
        android:fontFamily="serif"
        android:text="@string/correo"
        android:textAlignment="center"
        android:textColor="@color/azul"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.649"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nombre_app_"
        app:layout_constraintVertical_bias="0.657" />

    <TextView
        android:id="@+id/textotelefono"
        android:layout_width="334dp"
        android:layout_height="54dp"
        android:fontFamily="serif"
        android:text="@string/telefono"
        android:textAlignment="center"
        android:textColor="@color/azul"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.649"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nombre_app_"
        app:layout_constraintVertical_bias="0.764" />

    <ImageView
        android:id="@+id/imagendemicra"
        android:layout_width="279dp"
        android:layout_height="215dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.294"
        app:srcCompat="@mipmap/fotodeperfil" />

    <Button
        android:id="@+id/boton_ingresar_registro"
        android:layout_width="278dp"
        android:layout_height="70dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/rosado"
        android:text="@string/editar_perfil"
        android:textAlignment="center"
        android:textColor="@color/blanco"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textotelefono"
        app:layout_constraintVertical_bias="1.0"
        app:strokeColor="@color/blanco"
        app:strokeWidth="3dp" />

</androidx.constraintlayout.widget.ConstraintLayout>