<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris"
    android:id="@+id/loginActivity"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/nombre_app_"
        android:layout_width="208dp"
        android:layout_height="59dp"
        android:fontFamily="serif"
        android:text="@string/app_name"
        android:textColor="@color/azul"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <EditText
        android:id="@+id/nombre_login_usuario"
        style="@style/EditTextRounded"
        android:layout_width="277dp"
        android:layout_height="58dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.797"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.394" />

    <EditText
        android:id="@+id/contraseña_usuario_login"
        style="@style/EditTextRounded"
        android:layout_width="279dp"
        android:layout_height="53dp"
        android:layout_marginBottom="336dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.831"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre_login_usuario"
        app:layout_constraintVertical_bias="0.166" />

    <ImageView
        android:id="@+id/usuarioycontraseña_login"
        android:layout_width="49dp"
        android:layout_height="158dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424"
        app:srcCompat="@drawable/iconos" />

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="127dp"
        android:layout_height="131dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nombre_app_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/texto_aventura_login"
        android:layout_width="339dp"
        android:layout_height="68dp"
        android:fontFamily="serif"
        android:text="@string/login_bienvenida"
        android:textAlignment="center"
        android:textColor="@color/azul"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/nombre_login_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre_app_"
        app:layout_constraintVertical_bias="0.626" />

    <Button
        android:onClick="gotoingreso"
        android:id="@+id/boton_ingresar_registro"
        android:layout_width="278dp"
        android:layout_height="70dp"
        android:layout_marginBottom="228dp"
        android:backgroundTint="@color/rosado"
        android:text="@string/Boton_ingresar"
        android:textAlignment="center"
        android:textColor="@color/blanco"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraseña_usuario_login"
        app:layout_constraintVertical_bias="0.589"
        app:strokeColor="@color/blanco"
        app:strokeWidth="3dp" />

    <TextView
        android:id="@+id/recupera_contraseña_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/recuperacion_contraseña"
        android:textColor="@color/azul"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraseña_usuario_login"
        app:layout_constraintVertical_bias="0.407" />

    <TextView
        android:id="@+id/notienecuenta_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/creacion_cuenta"
        android:textColor="@color/azul"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.332"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/registrate_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="44dp"
        android:onClick="gotToRegistro2"
        android:text="@string/registro_home"
        android:textColor="@color/rosado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toEndOf="@+id/notienecuenta_login" />

    <Button
        android:id="@+id/boton_Google_login"
        android:layout_width="336dp"
        android:layout_height="70dp"
        android:layout_marginBottom="88dp"
        android:backgroundTint="@color/blanco"
        android:text="@string/ingreso_google"
        android:textAlignment="center"
        android:textColor="@color/azul"
        android:textSize="25sp"
        app:cornerRadius="15dp"
        app:icon="@drawable/ocoole"
        app:iconSize="50sp"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.973"
        app:strokeColor="@color/rosado"
        app:strokeWidth="3dp" />


</androidx.constraintlayout.widget.ConstraintLayout>