<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tv_nombrapp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris"
    tools:context=".RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="292dp"
            android:layout_height="175dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/azul"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textogeneral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/descripcion_deregistro"
            android:textColor="@color/azul"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextNombre"
            style="@style/EditTextRounded"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="text"
            android:text="Nombres"
            android:textColor="@color/azul" />

        <EditText
            android:id="@+id/editTextapellido"
            style="@style/EditTextRounded"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="text"
            android:text="Apellidos"
            android:textColor="@color/azul" />

        <EditText
            android:id="@+id/editTextCorreoelectronico"
            style="@style/EditTextRounded"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:gravity="center"
            android:text="Correo Electronico"
            android:textColor="@color/azul"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTexttelefono"
            style="@style/EditTextRounded"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="text"
            android:text="Telefono"
            android:textColor="@color/azul" />

        <EditText
            android:id="@+id/editTextTextPassword"
            style="@style/EditTextRounded"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:ems="10"
            android:inputType="textPassword"
            android:text="Contraseña"
            android:textColor="@color/azul"/>
        <EditText
            android:id="@+id/editTextrepetircontraseña"
            style="@style/EditTextRounded"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:ems="10"
            android:inputType="textPassword"
            android:text="repetir"
            android:textColor="@color/azul"/>

        <CheckBox
            android:id="@+id/checkBox"

            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:ems="10"
            android:text="Terminos y Condiciones"
            android:textColor="@color/azul"
           />

        <Button
            android:onClick="gotoperfil"
            android:id="@+id/boton_ingresar_registro"
            android:layout_width="278dp"
            android:layout_height="70dp"
            android:layout_marginTop="27dp"
            android:layout_marginBottom="228dp"
            android:backgroundTint="@color/rosado"
            android:text="@string/registro_home"
            android:textAlignment="center"
            android:textColor="@color/blanco"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.589"
            app:strokeColor="@color/blanco"
            app:strokeWidth="3dp" />

        <TextView
            android:onClick="gotoiniciarsesion"
            android:id="@+id/texto_registrate_home"
            android:layout_width="112dp"
            android:layout_marginTop="20dp"
            android:layout_height="38dp"
            android:fontFamily="serif"
            android:text="iniciar_sesion"
            android:textColor="@color/rosado"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.565"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.808" />

    </LinearLayout>
</ScrollView>


